<resources>
    <string name="app_name">Cfs RFID</string>
    <string name="this_device_does_not_support_mifare_classic_tags">This device does not support \"Mifare Classic\" tags, RFID functions disabled</string>
    <string name="please_activate_nfc">Please activate NFC</string>
    <string name="tag_found">"TAG Found: "</string>
    <string name="data_read_from_tag">Data read from TAG</string>
    <string name="unknown_or_empty_tag">Unknown or empty TAG</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="error_reading_tag">Error reading TAG</string>
    <string name="error_closing_connection">Error closing connection</string>
    <string name="data_written_to_tag">Data written to TAG</string>
    <string name="error_writing_to_tag">Error writing to TAG</string>
    <string name="pick_color">Pick Color</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="_00_00_00_00">00 00 00 00</string>
    <string name="close">Close</string>
    <string name="picker">Picker</string>
    <string name="invalid_tag_type">Invalid tag type</string>
    <string name="tag_id">Tag ID:</string>
    <string name="color">Color:</string>
    <string name="size">Size:</string>
    <string name="type">Type:</string>
    <string name="brand">Brand:</string>
    <string name="auto_read_on_tag_scan">Auto read on tag scan?</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="day">Day:</string>
    <string name="year">Year:</string>
    <string name="vendor">Vendor:</string>
    <string name="batch">Batch:</string>
    <string name="material">Material:</string>
    <string name="serial">Serial:</string>
    <string name="reserve">Reserve:</string>
    <string name="custom_tag_data">Custom Tag Data</string>
    <string name="incorrect_tag_data_length">Incorrect tag data length</string>
    <string name="open_custom_tag_editor">Open Custom Tag Editor</string>
    <string name="tag_formatted">Tag formatted</string>
    <string name="error_formatting_tag">Error formatting tag</string>
    <string name="failed_to_encrypt_data">Failed to encrypt data</string>
    <string name="month">Month:</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="format_tag">Format Tag</string>
    <string name="def_mon">A</string>
    <string name="def_day">B1</string>
    <string name="def_yr">24</string>
    <string name="def_ven">0276</string>
    <string name="def_bat">A2</string>
    <string name="def_mat">101001</string>
    <string name="def_col">00000FF</string>
    <string name="def_len">0330</string>
    <string name="def_ser">000001</string>
    <string name="def_res">000000</string>
    <string name="values_reset">Values reset</string>
    <string name="randomize_serial">Randomize Serial</string>
    <string name="select_color">Select Color</string>
    <string name="check">Check</string>
    <string name="update">Update</string>
    <string name="k2_printer_ip">Printer IP:</string>
    <string name="update_desc">Tap the check button to check if there is an update for the material database on github.\n\nIf there is an update found tap the update button to download and install it.</string>
    <string name="update_desc_printer">Enter the ip address or hostname of your %s printer and SSH password to update the filament database from the printer.\n\nThis requires root access to be enabled on the printer to work.</string>
    <string name="upload_desc_printer">Enter the ip address or hostname of your %s printer and SSH password to update the filament database on the printer.\n\nThis requires root access to be enabled on the printer to work.</string>
    <string name="update_available">Update available</string>
    <string name="no_update_available">No update available</string>
    <string name="unable_to_download_file_from_printer">Unable to download database file</string>
    <string name="update_successful">Update successful, Restarting app</string>
    <string name="filament_info">Filament Information</string>
    <string name="erase_message">This will erase the tag and set the default MIFARE key</string>
    <string name="format_tag_q">Format Tag?</string>
    <string name="format">Format</string>
    <string name="current_version">Installed Version: %d</string>
    <string name="printer_version">Available Version: %d</string>
    <string name="hex_color_code">HEX Color Code</string>
    <string name="printer">Printer</string>
    <string name="creality_type">Creality %s</string>
    <string name="get_update_from_printer">Get update from printer</string>
    <string name="please_enter_printer_ip_address">Please enter printer IP address</string>
    <string name="password">Password:</string>
    <string name="please_enter_ssh_password">Please enter SSH password</string>
    <string name="error_uploading_to_printer">Error uploading to printer</string>
    <string name="upload_successful">Upload successful</string>
    <string name="error_resetting_database">Error resetting database</string>
    <string name="printer_database_has_been_reset">Printer database has been reset</string>
    <string name="upload">Upload</string>
    <string name="reset">Reset</string>
    <string name="reset_printer_database">Reset printer database?</string>
    <string name="reboot_printer">Reboot printer?</string>
    <string name="reset_app_database">Reset app database?</string>
    <string name="prevent_db_updates">Prevent DB updates?</string>
    <string name="update_printer_database">Update Printer Database</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="uploading">Uploading...</string>
    <string name="resetting">Resetting...</string>
    <string name="checking_for_updates">Checking for updates...</string>
    <string name="printer_and_app_databases_have_been_reset">Printer and app databases have been reset</string>
    <string name="downloading_update">Downloading update...</string>
    <string name="rfid_disabled_tap_here_to_enable_nfc">NFC Disabled\nTap here to enable NFC</string>
    <string name="rfid_functions_disabled">RFID functions disabled</string>
    <string name="error">ERROR</string>
    <string name="tag_not_compatible">Tag not compatible</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="submit">Submit</string>
    <string name="invalid_hex_code_please_use_rrggbb_format">Invalid Hex Code. Please use RRGGBB format.</string>
    <string name="enter_hex_color_rrggbb">Enter Hex Color (RRGGBB)</string>
    <string name="rrggbb">RRGGBB</string>
    <string name="rgb_sliders">RGB Sliders</string>
    <string name="color_picker">Color Picker</string>
    <string name="preset_colors">Preset Colors</string>
</resources>